--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [macos, windows]
+        os: [linux, macos, windows]
         java: [13]
 
     env:
